<resources>
    <string name="app_name">MovieDB</string>
    <string name="action_settings">Settings</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="movie_database">Movie Database</string>
    <string name="check_network_connection">Unable to connect to TheMovieDb, Please check your network connection.</string>
    <string name="no_result_found"><![CDATA[<  There is  no result to show >]]></string>
    <string name="unknown"><![CDATA[<unknown>]]></string>
    <string name="overview">Overview :</string>
    <string name="genre">Genre :</string>
    <string name="birthday">Birthday :</string>
    <string name="place_of_birth">Place Of Birth :</string>
    <string name="biography">Biography :</string>
    <string name="homepage">Homepage :</string>
    <string name="alsoknownas">Also Known As :</string>
    <string name="languages">Languages :</string>
    <string name="countries">Countries :</string>
    <string name="release_date">Release Date :</string>
    <string name="ratings">Ratings : </string>
    <string name="votes">Votes Count : </string>
    <string name="official_website">Official Website</string>
    <string name="actor_and_actress">Actor / Actress</string>
    <string name="place_holder_dash">- -</string>
    <string name="no_movie_detail">Movie Detail not Available</string>
    <string name="no_person_detail">Person Detail not Available</string>
    <string name="thumb_transition_name">thumbImage</string>
    <string name="menu_home">Home</string>
    <string name="menu_people">People</string>
    <string name="menu_about">About</string>
    <string name="movie_popular">Popular</string>
    <string name="movie_now_playing">Now Playing</string>
    <string name="movie_upcoming">UpComing</string>
    <string name="about">Dwi Setiyono</string>
    <string name="search">Search</string>
    <string name="search_movie">Search Movie</string>
    <string name="search_person">Search Person</string>
</resources>
