<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_live_tv_black_24dp"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_people"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/menu_people"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_about"
        android:enabled="true"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu_about"
        app:showAsAction="ifRoom" />
</menu>