<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arkadroid.fragment.PersonFragment">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="false">

            <com.mancj.materialsearchbar.MaterialSearchBar
                android:id="@+id/searchBar"
                style="@style/MaterialSearchBarLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mt_hint="@string/search"
                app:mt_maxSuggestionsCount="10"
                app:mt_placeholder="@string/search_person"
                app:mt_speechMode="false" />

            <LinearLayout
                android:id="@+id/loadingProgressView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:padding="@dimen/d_smaller">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/searchBar"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:id="@+id/llPersonPopular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rvPersonPopular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/emptyView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/no_result_found"
                android:textColor="@color/textGrey"
                android:textSize="@dimen/text_large"
                android:visibility="gone" />

        </RelativeLayout>

    </android.support.design.widget.CoordinatorLayout>

</FrameLayout>
