<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_height"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/collapsingToolbarChapterTestTitleAppearences"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <ImageView
                    android:id="@+id/ivThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:transitionName="@string/thumb_transition_name" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/loadingProgressView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:padding="@dimen/d_smaller"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailsView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/d_large"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/tvBirthDayLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d_normal"
                    android:text="@string/birthday"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBirthDay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_larger"
                    android:layout_marginRight="@dimen/d_normal"
                    android:text="@string/place_holder_dash"
                    android:textStyle="italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/d_normal"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/tvPlaceOfBirthLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/d_normal"
                    android:text="@string/place_of_birth"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPlaceOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_larger"
                    android:layout_marginRight="@dimen/d_normal"
                    android:text="@string/place_holder_dash"
                    android:textStyle="italic" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/d_normal"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/tvBiographyLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d_normal"
                    android:layout_marginLeft="@dimen/d_normal"
                    android:layout_marginRight="@dimen/d_normal"
                    android:layout_marginTop="@dimen/d_normal"
                    android:text="@string/biography"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvBiography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_larger"
                    android:layout_marginRight="@dimen/d_normal"
                    android:text="@string/place_holder_dash" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/d_normal"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/tvAlsoKnownAsLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d_normal"
                    android:layout_marginLeft="@dimen/d_normal"
                    android:layout_marginRight="@dimen/d_normal"
                    android:layout_marginTop="@dimen/d_normal"
                    android:text="@string/alsoknownas"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAlsoKnownAs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_larger"
                    android:layout_marginRight="@dimen/d_normal"
                    android:text="@string/place_holder_dash" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/d_normal"
                    android:background="@color/lightGray" />

                <TextView
                    android:id="@+id/tvWebSiteLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d_normal"
                    android:layout_marginLeft="@dimen/d_normal"
                    android:layout_marginRight="@dimen/d_normal"
                    android:layout_marginTop="@dimen/d_normal"
                    android:text="@string/official_website"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWebSite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_larger"
                    android:layout_marginRight="@dimen/d_normal"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:text="@string/place_holder_dash" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>